--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div class="title">Самой любимой Фаризе</div>
   <div class="single">
-    <img src="photo/meow4.jpg" alt="">
+    <img src="meow4.jpg" alt="">
     <div class="photos">
       Это самая прекрасная девочка.💕
     </div>
@@ -19,7 +19,7 @@
   </div>
   </div>
   <div class="video">
-    <video src="photo/IMG_8784.MOV" controls>
+    <video src="IMG_8784.MOV" controls>
 
     </video>
   </div>
@@ -35,16 +35,16 @@
 
     <div class="carousel" id="carousel">
       
-      <img src="photo/meow1.jpg">
-      <img src="photo/meow10.jpg">
-      <img src="photo/meow2.jpg">
-      <img src="photo/meow3.jpg">
-      <img src="photo/meow11.jpg">
-      <img src="photo/meow7.jpg">
-      <img src="photo/meow8.jpg">
-      <img src="photo/meow9.jpg">
-      <img src="photo/meow5.jpg">
-      <img src="photo/meow6.jpg">
+      <img src="meow1.jpg">
+      <img src="meow10.jpg">
+      <img src="meow2.jpg">
+      <img src="meow3.jpg">
+      <img src="meow11.jpg">
+      <img src="meow7.jpg">
+      <img src="meow8.jpg">
+      <img src="meow9.jpg">
+      <img src="meow5.jpg">
+      <img src="meow6.jpg">
     </div>
 
     <button class="arrow right" onclick="next()">→</button>
